# MITRE-MCP

./: .dockerignore  .gitignore  .smitheryignore  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.backup  FINAL_DEPLOYMENT_GUIDE.md  FRAMEWORK_OVERVIEW.md  INSTALLATION_GUIDE.md  MANIFEST.in  NPX_READY_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  SMITHERY_DEPLOYMENT_READY.md  SMITHERY_FIX_READY.md  SMITHERY_UPLOAD_GUIDE.md  configure_claude.py  demo.py  docker-compose.yml  index.js  install.sh  live_demo.py  mcp.json  mcp_server.py  mitre_attack.py  models.py  package.json  production_tests.py  pyproject.toml  quick_demo.py  requirements.txt  rewrite_commits.sh  run.py  run_mitre_mcp.sh  setup.py  simple_demo.py  simple_mcp_server.py  smithery.yaml  smithery_new.yaml  (+6 more)
data/: mitre_attack.db  test_mitre.db
src/: __init__.py  __main__.py  mcp_server.py  mitre_attack.py  threat_analyzer.py  web_interface.py
src/data/: mitre_attack.db
templates/: index.html
