[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitre-mcp"
version = "1.0.0"
description = "Threat intelligence framework with MITRE ATT&CK mapping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2"
]

[project.scripts]
mitre-mcp = "src.mcp_server:main"
mitre-web = "src.web_interface:main"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.html", "*.db"]
